; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/d3d9/extr_device.c_CreateD3D9HalDevice.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/d3d9/extr_device.c_CreateD3D9HalDevice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.IDirect3DDevice9 = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"Not enough memory to create HAL device\00", align 1
@DDERR_OUTOFMEMORY = common dso_local global i32 0, align 4
@D3DDEVTYPE_HAL = common dso_local global i32 0, align 4
@D3D_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CreateD3D9HalDevice(i32 %0, i32 %1, i32 %2, i32 %3, i32* %4, i32 %5, %struct.IDirect3DDevice9** %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.IDirect3DDevice9**, align 8
  %16 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store %struct.IDirect3DDevice9** %6, %struct.IDirect3DDevice9*** %15, align 8
  %17 = load %struct.IDirect3DDevice9**, %struct.IDirect3DDevice9*** %15, align 8
  %18 = bitcast %struct.IDirect3DDevice9** %17 to i32*
  %19 = call i32 @AlignedAlloc(i32* %18, i32 4)
  %20 = call i64 @FAILED(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %7
  %23 = call i32 @DPRINT1(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %24 = load i32, i32* @DDERR_OUTOFMEMORY, align 4
  store i32 %24, i32* %8, align 4
  br label %48

25:                                               ; preds = %7
  %26 = load %struct.IDirect3DDevice9**, %struct.IDirect3DDevice9*** %15, align 8
  %27 = load %struct.IDirect3DDevice9*, %struct.IDirect3DDevice9** %26, align 8
  %28 = ptrtoint %struct.IDirect3DDevice9* %27 to i32
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* @D3DDEVTYPE_HAL, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %12, align 4
  %34 = load i32*, i32** %13, align 8
  %35 = load i32, i32* %14, align 4
  %36 = call i32 @InitD3D9BaseDevice(i32 %28, i32 %29, i32 %30, i32 %31, i32 %32, i32 %33, i32* %34, i32 %35)
  store i32 %36, i32* %16, align 4
  %37 = load i32, i32* %16, align 4
  %38 = call i64 @FAILED(i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %46

40:                                               ; preds = %25
  %41 = load %struct.IDirect3DDevice9**, %struct.IDirect3DDevice9*** %15, align 8
  %42 = load %struct.IDirect3DDevice9*, %struct.IDirect3DDevice9** %41, align 8
  %43 = ptrtoint %struct.IDirect3DDevice9* %42 to i32
  %44 = call i32 @AlignedFree(i32 %43)
  %45 = load i32, i32* %16, align 4
  store i32 %45, i32* %8, align 4
  br label %48

46:                                               ; preds = %25
  %47 = load i32, i32* @D3D_OK, align 4
  store i32 %47, i32* %8, align 4
  br label %48

48:                                               ; preds = %46, %40, %22
  %49 = load i32, i32* %8, align 4
  ret i32 %49
}

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @AlignedAlloc(i32*, i32) #1

declare dso_local i32 @DPRINT1(i8*) #1

declare dso_local i32 @InitD3D9BaseDevice(i32, i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @AlignedFree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
